--- a/apps/counter/counter.html
+++ b/apps/counter/counter.html
@@ -1,3 +1,23 @@
 <section>
     <h1>Counter</h1>
+    <div>
+        <p>First Account: <span data-first-account></span></p>
+        <button class="ui button" data-first-deploy>Deploy</button>
+        <button class="ui button" data-first-increment>Increment</button>
+        <button class="ui button" data-first-reset>Reset</button>
+    </div>
+    <div>
+        <p>Second Account: <span data-second-account></span></p>
+        <button class="ui button" data-second-deploy>Deploy</button>
+        <button class="ui button" data-second-increment>Increment</button>
+        <button class="ui button" data-second-reset>Reset</button>
+    </div>
+    <div class="ui divider"></div>
+    <p>Contract Address: <span data-contract-address></span></p>
+    <p>Counter: <span data-contract-counter></span></p>
+    <div class="ui divider"></div>
+    <h2>Events</h2>
+    <div class="ui list" data-events-list>
+
+    </div>
 </section>
