added faucet link

--- a/apps/index.html
+++ b/apps/index.html
@@ -18,6 +18,7 @@
             </a>
             <a href="counter" data-navigo class="item">Counter</a>
             <a href="people-list" data-navigo class="item">People List</a>
+            <a href="https://faucet.metamask.io" target="_blank" class="item">Faucet</a>
         </div>
     </div>
     <div class="ui main container">
