first draft of PeopleList contract

--- a/apps/peopleList/peopleList.html
+++ b/apps/peopleList/peopleList.html
@@ -1,3 +1,14 @@
 <section>
     <h1>People List</h1>
+    <div>
+        <h2>Contract</h2>
+        <div>
+            <div class="ui action input">
+                <input data-input-contract type="text" placeholder="Insert Address...">
+                <button class="ui button" data-connect>Connect</button>
+            </div>
+            <button class="ui button" data-deploy>Deploy New</button>
+        </div>
+        <p>Contract Address: <span data-contract-address></span></p>
+    </div>
 </section>
