--- a/apps/peopleList/peopleList.html
+++ b/apps/peopleList/peopleList.html
@@ -10,5 +10,31 @@
             <button class="ui button" data-deploy>Deploy New</button>
         </div>
         <p>Contract Address: <span data-contract-address></span></p>
+        <form class="ui form" action="#">
+            <div class="field">
+                <label>Person</label>
+                <div class="four fields">
+                    <div class="field">
+                        <input type="text" data-person-name placeholder="Name">
+                    </div>
+                    <div class="field">
+                        <input type="date" data-person-birthdate placeholder="Birthdate">
+                    </div>
+                    <div class="field">
+                        <select data-person-sex>
+                            <option value="M">Male</option>
+                            <option value="M">Female</option>
+                        </select>
+                    </div>
+                    <div class="field">
+                        <button type="button" class="ui button" data-add>Add</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <h4>List</h4>
+        <div class="ui list" data-events-list>
+
+        </div>
     </div>
 </section>
