--- a/apps/index.html
+++ b/apps/index.html
@@ -19,6 +19,7 @@
             <a href="counter" data-navigo class="item">Counter</a>
             <a href="people-list" data-navigo class="item">People List</a>
             <a href="company" data-navigo class="item">Company</a>
+            <a href="simple-token" data-navigo class="item">Simple Token</a>
             <a href="https://faucet.metamask.io" target="_blank" class="item">Faucet</a>
         </div>
     </div>
