--- a/apps/index.html
+++ b/apps/index.html
@@ -21,6 +21,7 @@
             <a href="company" data-navigo class="item">Company</a>
             <a href="simple-token" data-navigo class="item">Simple Token</a>
             <a href="tutorial-token" data-navigo class="item">Token</a>
+            <a href="ito" data-navigo class="item">ITO</a>
             <a href="https://faucet.metamask.io" target="_blank" class="item">Faucet</a>
         </div>
     </div>
